Don't use default parameters for NS_NewAreaFrame.  Make relatively positioned frames not use NS_BLOCK_WRAP_SIZE and NS_BLOCK_SPACE_MGR.  b=180711  r=bzbarsky